<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <name>VTL Jupyter kernel</name>
    <description>Jupyter notebook providing VTL support through Trevas engine</description>
    <artifactId>trevas-jupyter</artifactId>
    <groupId>fr.insee</groupId>
    <version>0.5.2</version>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/licenses/MIT</url>
        </license>
    </licenses>

    <properties>
        <java.version>17</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <trevas.version>1.3.1</trevas.version>
        <spotless.version>2.43.0</spotless.version>
    </properties>

    <repositories>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/groups/public/</url>
        </repository>
        <repository>
            <id>SparkPackagesRepo</id>
            <url>https://repos.spark-packages.org/</url>
        </repository>
        <repository>
            <id>vendor</id>
            <url>file://${project.basedir}/vendor</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>saurfang</groupId>
            <artifactId>spark-sas7bdat</artifactId>
            <version>3.0.0-s_2.12</version>
            <exclusions>
                <exclusion>
                    <groupId>org.scala-lang</groupId>
                    <artifactId>scala-library</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-api</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.apache.logging.log4j</groupId>
                    <artifactId>log4j-api</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.apache.logging.log4j</groupId>
                    <artifactId>log4j-api-scala_2.12</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.scala-lang</groupId>
            <artifactId>scala-library</artifactId>
            <version>2.12.15</version>
        </dependency>
        <dependency>
            <groupId>fr.insee.trevas</groupId>
            <artifactId>vtl-engine</artifactId>
            <version>${trevas.version}</version>
        </dependency>
        <dependency>
            <groupId>fr.insee.trevas</groupId>
            <artifactId>vtl-spark</artifactId>
            <version>${trevas.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.15.3</version>
        </dependency>

        <dependency>
            <groupId>io.github.spencerpark</groupId>
            <artifactId>jupyter-jvm-basekernel</artifactId>
            <version>2.3.0</version>
            <exclusions>
                <exclusion>
                    <groupId>com.google.code.gson</groupId>
                    <artifactId>gson</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-kubernetes_2.12</artifactId>
            <version>3.5.0</version>
        </dependency>

        <dependency>
            <groupId>org.apache.hadoop</groupId>
            <artifactId>hadoop-aws</artifactId>
            <version>3.3.4</version>
        </dependency>
        <dependency>
            <groupId>org.apache.hadoop</groupId>
            <artifactId>hadoop-client</artifactId>
            <version>3.3.4</version>
        </dependency>

        <dependency>
            <groupId>com.intigua</groupId>
            <artifactId>antlr4-autosuggest</artifactId>
            <version>0.0.1-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.10.1</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.10.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.25.3</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>appassembler-maven-plugin</artifactId>
                <version>2.1.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>assemble</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <extraJvmArguments>--add-opens=java.base/sun.nio.ch=ALL-UNNAMED</extraJvmArguments>
                    <programs>
                        <program>
                            <mainClass>fr.insee.trevas.jupyter.VtlKernel</mainClass>
                            <id>trevas</id>
                            <platforms>
                                <platform>unix</platform>
                            </platforms>
                        </program>
                    </programs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>fr.insee.trevas.jupyter.VtlKernel</mainClass>
                        </manifest>
                        <manifestEntries>
                            <Automatic-Module-Name>fr.insee.trevas.jupyter</Automatic-Module-Name>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.12.1</version>
                <configuration>
                    <release>${java.version}</release>
                    <testRelease>${java.version}</testRelease>
                    <target>${java.version}</target>
                    <source>${java.version}</source>
                </configuration>
            </plugin>
            <plugin>
                    <groupId>com.diffplug.spotless</groupId>
                    <artifactId>spotless-maven-plugin</artifactId>
                    <version>${spotless.version}</version>
                    <configuration>
                        <!-- optional: limit format enforcement to just the files changed by this feature branch -->
                        <ratchetFrom>origin/main</ratchetFrom>
                        <formats>
                            <!-- you can define as many formats as you want, each is independent -->
                            <format>
                                <!-- define the files to apply to -->
                                <includes>
                                    <include>*.md</include>
                                    <include>.gitignore</include>
                                </includes>
                                <!-- define the steps to apply to those files -->
                                <trimTrailingWhitespace />
                                <endWithNewline />
                                <indent>
                                    <tabs>true</tabs>
                                    <spacesPerTab>4</spacesPerTab>
                                </indent>
                            </format>
                        </formats>
                        <!-- define a language-specific format -->
                        <java>
                            <!-- no need to specify files, inferred automatically, but you can if you want -->
                            <!-- apply a specific flavor of google-java-format and reflow long strings -->
                            <googleJavaFormat>
                                <version>1.19.2</version>
                                <style>AOSP</style>
                                <reflowLongStrings>true</reflowLongStrings>
                            </googleJavaFormat>
                            <!-- make sure every file has the following copyright header.
        optionally, Spotless can set copyright years by digging
        through git history (see "license" section below) -->
                            <licenseHeader>
                                <content>/* (C)$YEAR */</content>
                                <!-- or <file>${project.basedir}/license-header</file> -->
                           </licenseHeader>
                        </java>
                    </configuration>
            </plugin>
            <plugin>
                <groupId>com.rudikershaw.gitbuildhook</groupId>
                <artifactId>git-build-hook-maven-plugin</artifactId>
                <version>3.4.1</version>
                <configuration>
                    <installHooks>
                        <pre-commit>hooks/pre-commit.sh</pre-commit>
                    </installHooks>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>install</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.1.2</version>
                <configuration>
                    <argLine>--add-exports java.base/sun.nio.ch=ALL-UNNAMED</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
